Fixed spacing html harry
#194

--- a/static/style.css
+++ b/static/style.css
@@ -18,6 +18,7 @@
 html {
 	font-family: 'Mulish', sans-serif;
 	line-height: 1.5;
+	overflow-x: hidden;
 }
 
 * {
@@ -52,7 +53,6 @@ html {
 
 	--image-gradient: linear-gradient(180deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0) 100%);
 }
-
 
 html {
 	overflow-x: hidden;
